--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,10 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Caveat:wght@400;700&family=Lexend:wght@100..900&display=swap');
+@theme {
+  --font-playfair-display: "Playfair Display", serif;
+  --font-caveat: "Caveat", cursive;
+  --font-lexend: "Lexend", sans-serif;
+}
 
 :root {
   --background: #ffffff;
@@ -23,4 +29,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+div[contenteditable="true"]::before {
+  content: attr(placeholder); 
+  color: #aaa;
 }
